[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://scripts/CircleObstacle.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 119.71

[sub_resource type="GDScript" id=4]
script/source = "extends Area2D

signal inner_void_enter;

func ready():
	pass


"

[sub_resource type="CircleShape2D" id=1]
radius = 119.71

[sub_resource type="GDScript" id=5]
script/source = "extends Area2D

signal outer_void_enter;

func ready():
	pass

func _on_CircleObstacle_body_entered(body):
	Globals.playerHit = true
	print(\"outer void enter\")


func _on_CircleObstacle_body_exited(body):
	print(\"outer void exit\")
"

[sub_resource type="CircleShape2D" id=3]
radius = 214.8

[node name="CircleObstacle" type="Area2D"]
modulate = Color( 0.152941, 0.152941, 0.152941, 1 )
self_modulate = Color( 0.160784, 0.160784, 0.160784, 1 )
z_index = 1
z_as_relative = false
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.216218, 0.217245 )
z_index = 1
texture = ExtResource( 1 )

[node name="InnerCircle" type="Area2D" parent="."]
script = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InnerCircle"]
shape = SubResource( 1 )

[node name="OuterCircle" type="Area2D" parent="."]
script = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterCircle"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_CircleObstacle_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CircleObstacle_body_exited"]
[connection signal="body_entered" from="InnerCircle" to="." method="_on_InnerCircle_body_entered"]
[connection signal="body_exited" from="InnerCircle" to="." method="_on_InnerCircle_body_exited"]
[connection signal="body_entered" from="OuterCircle" to="." method="_on_OuterCircle_body_entered"]
[connection signal="body_exited" from="OuterCircle" to="." method="_on_OuterCircle_body_exited"]
